--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-Gemfile.lock
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+*.bundle
+*.so
+*.o
+*.a
